--- a/src/index.html
+++ b/src/index.html
@@ -11,27 +11,35 @@
         <input type="file" id="imageInput" accept="image/*">
         <br>
         <br>
-        <label>　幅(x):
+        <label>
+            幅(x):
             <input type="number" id="widthInput" value="">
         </label>
-        <label>　幅(倍):
+        <label>
+            幅(倍):
             <input type="number" id="widthscaleInput" value="6">
         </label>
         <br>
         <br>
-        <label>高さ(y):
+        <label>
+            高さ(y):
             <input type="number" id="heightInput" value="">
         </label>
-        <label>高さ(倍):
+        <label>
+            高さ(倍):
             <input type="number" id="heightscaleInput" value="6">
         </label>
         <br>
         <br>
         <button id="resizeButton">サイズ変更</button>
+        <a id="downloadLink" style="display: none;" download="resized_image.png">
+            <button>ダウンロード</button>
+        </a>
         <br>
         <br>
         <canvas id="canvas"></canvas>
-        <p>画像サイズ:
+        <p>
+            画像サイズ:
             <span id="imageSizeLabel">(???,???)</span>
         </p>
         <script src="script.js"></script>
