--- a/src/index.html
+++ b/src/index.html
@@ -4,28 +4,42 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IMAGE-RESIZE</title>
+        <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>IMAGE-RESIZE</h1>
-        <input type="file" id="imageInput" accept="image/*">
+        <input
+            class="file"
+            type="file"
+            id="imageInput"
+            accept="image/*"
+        >
         <br>
         <br>
         <label>
             x(倍):
-            <input type="number" id="widthscaleInput" value="6">
+            <input
+                class="number"
+                type="number"
+                id="widthscaleInput"
+                value="6"
+            >
         </label>
-        <br>
-        <br>
         <label>
             y(倍):
-            <input type="number" id="heightscaleInput" value="6">
+            <input
+                class="number"
+                type="number"
+                id="heightscaleInput"
+                value="6"
+            >
         </label>
         <br>
         <br>
-        <button id="resizeButton">サイズ変更</button>
+        <button class="button" id="resizeButton">サイズ変更</button>
         <a id="downloadLink" style="display: none;" download="resized_image.png">
-            <button>ダウンロード</button>
+            <button class="button">ダウンロード</button>
         </a>
         <br>
         <br>
